tests/fail/registering/not unique coercion path.mmu
(sort s     ) 
(sort t     ) 
(sort u     ) 
